--- a/composer.json
+++ b/composer.json
@@ -30,7 +30,7 @@
   ],
   "require": {
     "php": ">=7.0.0",
-    "yiisoft/yii2": "~2.0.0",
+    "yiisoft/yii2": ">=2.0",
     "yiisoft/yii2-bootstrap": "~2.0.0",
     "bupy7/yii2-grid": "@dev",
     "yiister/yii2-advanced-grid": "~1.0",
